@@ -151,7 +151,10 @@ else:
         return getattr(function, "__dict__", None)
 
     def _getcode(function):
-        return getattr(function, "func_code", None)
+        try:
+            return getattr(function, "__code__")
+        except AttributeError:
+            return getattr(function, "func_code", None)
 
     def print_(*args, **kwargs):
         """ minimal backport of py3k print statement. """ 
