@@ -11,6 +11,11 @@ Changes between 1.3.0 and 1.3.1
 - improve tracebacks presentation: 
   - raises shows shorter more relevant tracebacks
 
+- improve support for raises and other dynamically compiled code by
+  manipulating python's linecache.cache instead of the previous
+  rather hacky way of creating custom code objects.  This makes 
+  it seemlessly work on Jython and PyPy at least. 
+
 Changes between 1.2.1 and 1.3.0
 ==================================================
 
